corpus/extern/testdata/expected/2-e.txtar
-- stdout --
-- stderr --
error[SEMANTIC_ERROR]: incompatible arguments for function call
  --> 2-e.bal:19:16
   |
19 |     string _ = bar(1, 1); // @error
   |                ^^^^^^^^^
